implement OfflineData in Announcements